
+ Bug Fixes:

- Sometimes the status bar was not updated properly in newly created
  views.

- Fixed a few help viewer quirks.

- Fixed an obscure bug in the text area scrolling code that could
  manifest when the same buffer was viewed in multiple text areas.

- Fixed Global Options dialog box resizing problems.

- Fixed possible ArrayIndexOutOfBoundsExceptions when deleting text.

* Version 4.1pre7

Thanks to Chris Kent, Jonathan Revusky and Marcelo Vanzin for
contributing to this release.

+ Syntax Highlighting Changes:

- Freemaker syntax highlighting (Jonathan Revusky).

+ User Interface Changes:

- The parent directory list in the file system browser now requires a
  double-click (or middle mouse button click) to open a directory. This
  makes it consistent with the behavior of the file tree below it, which
  also requires double-clicks.

- The tooltips shown by the file system browser when a filename is
  partially obscured are no longer positioned over the filename, because
  Swing does not pass clicks inside tooltips to the underlying
  component.

- The help viewer now shows the title of the current page in place of
  the location field, and the location field is now gone. As a result
  the help viewer can no longer be used to view arbitriary URLs. Use the
  InfoViewer plugin for that purpose instead.

+ Global Options Dialog Changes:

- The Global Options dialog box now opens to display the most recently
  viewed option pane. Also the "overview" pane is gone.

- Merged the Editing and Mode-Specific option panes.

- The text area right-click popup menu now contains an item "Customize"
  for quick access to the Context Menu pane of the Global Options dialog
  box.

- If a HyperSearch produces no results, older result nodes are collapsed
  in the "HyperSearch Results" window.

+ Performance Improvements:

- Improved performance of line offset manager when a lot of changes are
  made starting from the end of the buffer going to the beginning. Early